<resources>
    <string name="app_name">Справочник депутата</string>
    <string name="start_text"></string>
    <string name="next_button">Следующая\nубедительная\nфраза</string>
    <string name="previous_button">Повторить\nдля тех,\nкто в танке</string>
    <string name="begin_with">Начни с этого:\n</string>
    <string name="notify_message">Начинай разговор убедительно</string>
    <string name="notify_message_long">Начинай разговор убедительно вместе с приложением </string>
    <string name="get_started">Поехали!</string>
    <string name="_1_10_000">1/10.000</string>
    <string name="remove_ad">Убрать\nрекламу!</string>

    <string name="facebook_app_id" translatable="false">1629936247306355</string>
</resources>
