<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:background="@color/myBlue"
        android:orientation="vertical"
        tools:context="com.arturagapov.speechmaster.SpeechMasterActivity">
    <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView
                android:src="@drawable/logo"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_gravity="start"
                android:layout_width="80dp" android:layout_height="80dp"/>
        <TextView
                android:id="@+id/textontop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_10_000"
                android:textColor="@color/myYellow"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="start"
                android:textIsSelectable="false"/>

        <TextView
                android:id="@+id/premiun"
                android:visibility="visible"
                android:text="@string/remove_ad"
                android:textColor="@color/myWhite"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:onClick="onClickPremium"
                android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/panel"
            android:gravity="center_vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="5dp"
                android:textColor="@color/myBlack"
                android:gravity="fill"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/start_text"
                android:id="@+id/phrase"
                android:layout_weight="1"
                android:textIsSelectable="false"/>
        <ImageButton
                android:id="@+id/share"
                android:background="@drawable/share"
                android:layout_gravity="right"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:onClick="onClickShare"
                android:layout_width="26dp" android:layout_height="26dp"/>
    </LinearLayout>

    <com.google.android.gms.ads.NativeExpressAdView
            android:layout_above="@+id/answer_buttons"
            android:id="@+id/nativeAdmobAds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            ads:adSize="360x100"
            ads:adUnitId="ca-app-pub-1399393260153583/5578579951">
    </com.google.android.gms.ads.NativeExpressAdView>

    <!--Buttons-->
    <LinearLayout
            android:id="@+id/answer_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

        <Button
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/previous_button"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textColor="@color/myBlack"
                android:background="@drawable/button_previous"
                android:id="@+id/previous_button"
                android:onClick="onClickPrevious"/>
        <Button
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/next_button"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textColor="@color/myBlack"
                android:background="@drawable/button_next"
                android:id="@+id/next_button"
                android:onClick="onClickNext"/>
    </LinearLayout>
</LinearLayout>
